--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -6,13 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/app.js"></script>
     <title>Document</title>
 </head>
 
 <body>
-    {{>header}}
-    <p>Created by {{name}}</p>
+    <div class="main-content">
+        {{>header}}
+        <p>Created by {{name}}</p>
+        <form action="">
+            <input type="text" placeholder="Location">
+            <button>search</button>
+        </form>
+        <p id="message-1"></p>
+        <p id="message-2"></p>
+    </div>
+    <script src="/js/app.js"></script>
+    
     {{>footer}}
 </body>
 
