--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -11,6 +11,7 @@
 
 <body>
     {{>header}}
+    <p>This site was created by Lsm. It used data from mapbox.com</p>
     <img src="{{img}}" alt="">
     {{>footer}}
 </body>
